# SITAIRIS_COURSE

./: .dockerignore  .flake8  .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  entrypoint.sh  entrypoint_celery.sh  entrypoint_localstack.sh  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.js
k8s/: secret_example.yaml
k8s/celery/: celery-deployment.yaml
k8s/db/: db-deployment.yaml  db-service.yaml
k8s/localstack/: localstack-configmap.yaml  localstack-deployment.yaml  localstack-service.yaml
k8s/microservice/: microservice-deployment.yaml  microservice-service.yaml
k8s/namespace/: ns.yml
k8s/rabbitmq/: rabbitmq3-deployment.yaml  rabbitmq3-service.yaml
k8s/redis/: redis-deployment.yaml  redis-service.yaml
k8s/web/: web-deployment.yaml  web-service.yaml
src/core/: exceptions.py  permissions.py  producer.py  serializers.py  services.py  tasks.py  views.py
src/innotter/: .settings.py.swp  celery.py  jwt_service.py  middleware.py  redis.py  settings.py  urls.py
src/microservice/: Dockerfile  consume.py  consumer.py  entrypoint_microservice.sh  jwt_service.py  main.py  middleware.py  pyproject.toml  router.py  schemas.py  services.py  settings.py  testing.py
src/microservice/lambda/: handler.py
src/page/: admin.py  mixins.py  models.py  permissions.py  serializers.py  services.py  signals.py  views.py
src/post/: models.py  permissions.py  serializers.py  services.py  signals.py  views.py
src/tests/: conftest.py  pytest.ini
src/user/: managers.py  models.py  permissions.py  serializers.py  services.py  urls.py  (+1 more)
(+29 files in other folders)
