[tool.poetry]
name = "innotter"
version = "0.1.0"
description = ""
authors = ["Andrey Neveykov <andrew.neveykov@innowise-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.16"
django = "^4.1.6"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.1"
celery = "^5.2.7"
boto3 = "^1.26.67"
pyjwt = "^2.6.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
urllib3 = "^1.26.14"
redis = "^4.5.1"
pika = "^1.3.1"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"
aio-pika = "^9.0.5"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest-mock = "^3.10.0"
drf-yasg = "^1.21.5"
django-cors-headers = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
