[tool.poetry]
name = "microservice"
version = "0.1.0"
description = ""
authors = ["Kiryl Dumansky <kiryl.dumansky@innowise-group.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.87"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
pika = "^1.3.1"
aio-pika = "^9.0.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
